@@ -1,0 +1,5 @@
+"""
+Client API for rtorrent
+"""
+
+from ._client import RtorrentClientApi
