@@ -1,4 +1,5 @@
 2021.??.??
+  * Added support for rtorrent
   * Added support for qBittorrent
   * Purge <script> tags from cached HTML (reduces size by ~40%)
   * submit/torrent-create: Added --reuse-torrent/-t option to get piece hashes
